--- a/FabricExample/ios/Podfile
+++ b/FabricExample/ios/Podfile
@@ -1,12 +1,14 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-ENV['RCT_NEW_ARCH_ENABLED'] = '1'
-
-platform :ios, '11.0'
+source 'https://github.com/react-native-tvos/react-native-tvos-podspecs.git'
+source 'https://cdn.cocoapods.org/'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'FabricExample' do
+
+  platform :ios, '12.0'
+
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -17,23 +19,41 @@ target 'FabricExample' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => flags[:hermes_enabled],
     :fabric_enabled => flags[:fabric_enabled],
-    # An abosolute path to your application root.
-    :app_path => "#{Dir.pwd}/.."
+    # An absolute path to your application root.
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   target 'FabricExampleTests' do
     inherit! :complete
     # Pods for testing
   end
+end
 
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
+target 'FabricExample-tvOS' do
 
-  post_install do |installer|
-    react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+  platform :tvos, '12.0'
+
+  config = use_native_modules!
+
+  # Flags change depending on the env values.
+  flags = get_default_flags()
+
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # Hermes not yet available on tvOS
+    :hermes_enabled => false,
+    :fabric_enabled => flags[:fabric_enabled],
+    # An abosolute path to your application root.
+    :app_path => "#{Dir.pwd}/.."
+  )
+
+  target 'FabricExample-tvOSTests' do
+    inherit! :complete
+    # Pods for testing
   end
+end
+
+post_install do |installer|
+  react_native_post_install(installer)
+  __apply_Xcode_12_5_M1_post_install_workaround(installer)
 end
