--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.0-rc.2",
+    "react-native": "https://www.dropbox.com/s/raw/qxcbqrh6lfsqhs7/rntv68.tgz",
     "react-native-reanimated": "link:../"
   },
   "devDependencies": {
