--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-native": "0.68.0-rc.2",
+    "react-native": "https://www.dropbox.com/s/raw/qxcbqrh6lfsqhs7/rntv68.tgz",
     "react-native-codegen": "^0.0.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-test-renderer": "17.0.2",
