--- a/Example/package.json
+++ b/Example/package.json
@@ -20,14 +20,14 @@
     "@react-navigation/native-stack": "^6.9.0",
     "react": "18.2.0",
     "react-dom": "^16.13.1",
-    "react-native": "0.72.3",
+    "react-native": "npm:react-native-tvos@0.72.4-0rc0",
     "react-native-box2d": "^0.2.5",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
-    "react-native-svg": "^13.9.0"
+    "react-native-svg": "^13.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
