--- a/TVOSExample/package.json
+++ b/TVOSExample/package.json
@@ -15,20 +15,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "d3-shape": "^3.2.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/elements": "^1.3.17",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "d3-shape": "^3.2.0",
     "expo": "49.0.7",
     "react": "18.2.0",
     "react-dom": "18.0.0",
-    "react-native": "npm:react-native-tvos@0.72.4-0rc0",
-    "react-native-gesture-handler": "^2.12.0",
-    "react-native-pager-view": "5.4.24",
+    "react-native": "npm:react-native-tvos@0.72.4-0rc1",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.23.0",
+    "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.13.0"
   },
   "devDependencies": {
